--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -355,6 +355,7 @@
     .menu-area .mobile-nav-toggler {
         display: block;
     }
+    nav .logo img,
     .menu-area .mobile-nav-toggler .logo img {
         width: 172px;
         padding: 0;
