--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -555,6 +555,13 @@
         -webkit-backdrop-filter: blur(5.3px);
         padding: 1rem;
     }
+    .counter-bg {
+        margin-top: 0;
+    }
+    .find-wrap {
+        background-image: unl('img/bg/counter_bg.jpg');
+        background-color: transparent;
+    }
     .find-wrap .location {
         padding: 45px 35px 45px 35px;
         width: 100%;
@@ -572,7 +579,10 @@
         border-right: none;
         border-bottom: 3px solid #e73a2d;
         min-height: auto;
-        padding: 40px 64px;
+        padding: 10px 64px;
+        margin-block: .5rem;
+        background: #c12004;
+        border-radius: 8px;
     }
     .find-wrap .other-find {
         padding: 40px 45px 40px 45px;
