--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -546,6 +546,7 @@
     }
     .slider-bg {
         background-position: right center;
+        background-image: url("/assets/img/slider/mobile-slider-1.png")
     }
     .slider-area .custom-container .row > div {
         background: rgba(0, 0, 0, 0.09);
