--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2006,7 +2006,7 @@ nav .logo img {
     z-index: 1;
 }
 .faq-two-img {
-    background-image: url(../img/images/s_faq_img.jpg);
+    background-image: url(/assets/img/images/smiley-woman-playing-with-dog-up-adoption.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
